@@ -24,12 +24,12 @@ else ()
     MESSAGE(STATUS "Using System MiniZip")
 endif()
 
-#if( NOT USE_SYSTEM_LIBS OR NOT HUNSPELL_FOUND )
+if( NOT USE_SYSTEM_LIBS OR NOT HUNSPELL_FOUND )
     MESSAGE(STATUS "Using Bundled Hunspell")
     include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/hunspell.cmake)
-#else ()
-#    MESSAGE(STATUS "Using System Hunspell")
-#endif()
+else ()
+    MESSAGE(STATUS "Using System Hunspell")
+endif()
 
 if( NOT USE_SYSTEM_LIBS OR NOT PCRE_FOUND OR APPLE )
     MESSAGE(STATUS "Using Bundled PCRE")
@@ -39,8 +39,8 @@ else ()
 endif()
 
 if (SYSTEM_LIBS_REQUIRED)
-    #if (NOT ZLIB_FOUND OR NOT MINIZIP_FOUND OR NOT HUNSPELL_FOUND OR (NOT APPLE AND NOT PCRE_FOUND))
-    if (NOT ZLIB_FOUND OR NOT MINIZIP_FOUND OR (NOT APPLE AND NOT PCRE_FOUND))
+    if (NOT ZLIB_FOUND OR NOT MINIZIP_FOUND OR NOT HUNSPELL_FOUND OR (NOT APPLE AND NOT PCRE_FOUND))
+        #if (NOT ZLIB_FOUND OR NOT MINIZIP_FOUND OR (NOT APPLE AND NOT PCRE_FOUND))
         MESSAGE(FATAL_ERROR "Could not find all required system libraries...")
     endif()
 endif()
