@@ -68,7 +68,7 @@ if (USE_SYSTEM_LIBS)
     find_package( ZLIB )
     find_package( PkgConfig )
     find_package( MiniZip )
-    #pkg_check_modules( HUNSPELL hunspell )
+    pkg_check_modules( HUNSPELL hunspell )
     if ( NOT APPLE )
         pkg_check_modules( PCRE libpcre16 )
     endif()
