@@ -83,7 +83,7 @@ QString PluginDB::launcherRoot()
 #elif defined(Q_OS_WIN32)
     launcher_roots.append(QCoreApplication::applicationDirPath() + "/plugin_launchers/");
 #elif !defined(Q_OS_WIN32) && !defined(Q_OS_MAC)
-    // user supplied environment variable to plugin launcher directory will overrides everything
+    // user supplied environment variable to 'share/sigil' directory will overrides everything
     if (!sigil_extra_root.isEmpty()) {
         launcher_root = sigil_extra_root + "/plugin_launchers/";
     } else {
