@@ -336,9 +336,18 @@ void SpellCheck::loadDictionaryNames()
     paths << QCoreApplication::applicationDirPath() + "/hunspell_dictionaries";
 #endif
 #if !defined(Q_OS_WIN32) && !defined(Q_OS_MAC)
-    if (!sigil_extra_root.isEmpty()) {
+    // env var from sigil_constants.cpp
+    const QString env_dic_location = system_hunspell_dicts;
+
+    // prefer the directory specified by the env var SIGIL_DICTIONARIES above all else.
+    if (!env_dic_location.isEmpty()) {
+        paths << env_dic_location;
+    }
+    // else use the env var runtime overridden 'share/sigil/hunspell_dictionaries/' location.
+    else if (!sigil_extra_root.isEmpty()) {
         paths.append(sigil_extra_root + "/hunspell_dictionaries/");
     } else {
+        // else use the standard build time 'share/sigil/hunspell_dictionaries/'location.
         paths.append(sigil_share_root + "/hunspell_dictionaries/");
     }
 #endif
