@@ -16,7 +16,12 @@ const QStringList PYTHON_SYS_PATHS = QStringList () << "/plat-darwin" << "/lib-d
 
 #if !defined(_WIN32) && !defined(__APPLE__)
 const QString PATH_LIST_DELIM = ":";
+// Runtime env var override of Sigil's 'share/sigil' directory
 const QString sigil_extra_root = QString(getenv("SIGIL_EXTRA_ROOT"));
+// Runtime env var override of hunspell dictionaries directory to use
+const QString system_hunspell_dicts = QString(getenv("SIGIL_DICTIONARIES"));
+// Standard build-time location of Sigil's 'share/sigil' directory. Set in src/CMakeLists.txt with the line:
+// set_source_files_properties( sigil_constants.cpp PROPERTIES COMPILE_DEFINITIONS SIGIL_SHARE_ROOT="${SIGIL_SHARE_ROOT}" )
 const QString sigil_share_root = QString(SIGIL_SHARE_ROOT);
 const QString PYTHON_MAIN_PATH = "/python3/lib/python3.4";
 #if __x86_64__ || __ppc64__
