@@ -5,6 +5,9 @@ Upcoming Sigil 0.9.0 Release
     - Allow PrettyPrint_Gumbo to condense whitespace where allowed
     - In PluginRunner auto-repair modified xml (opf, ncx), do not check xml with xhtml wellformed check
     - Fix bug in plugin epub3 interface, conversion of properties with null strings to None
+    - Restore ability to override hunspell dictionary locations on Linux with SIGIL_DICTIONARIES env var
+    - Restore ability to build Sigil against system hunspell libraries on Linux
+    - Adjust pluginhunspell.py to try to find system hunspell if bundled hunspell is not built/installed
     ... more to come ?
 
 
